rewrote the purpose of the project in the readme's

--- a/README.ipynb
+++ b/README.ipynb
@@ -6,11 +6,15 @@
    "source": [
     "# README - *Finding TikTok Affiliates In Beauty*\n",
     "\n",
-    "This notebook includes the process of extracting the TikTok users that meet the following criteria:\n",
+    "This notebook walks through the code and scripts used to extract TikTok user's accounts for the purposes of finding affiliates for marketing agencies. The accounts must meet the following criteria:\n",
     "\n",
-    "- In the makeup and beauty world\n",
+    "- In the makeup, hair care, and beauty world\n",
     "- Have less than 50K followers\n",
-    "- Have an email in their description"
+    "- Have an email in their description\n",
+    "\n",
+    "After scraping accounts and emails that match the above criteria, we leverage the Python SDK for Google's Gemini API to provide a brief summary of the eligible accounts using their TikToks and bio. \n",
+    "\n",
+    "Individual python scripts were written to be run in the same order as defined by the sections below."
    ]
   },
   {
